objects/EUR_TR_AccountSalesMAT__c.object
<CustomObject>
    <description>Is using by PR Turkey TT Project</description>
    <fields>
        <fullName>EUR_TR_BrandQualitySize__c</fullName>
        <label>EUR_TR_BrandQualitySize</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_BrandQuality__c</fullName>
        <label>EUR_TR_BrandQuality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_Brand__c</fullName>
        <label>EUR_TR_Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>EUR_TR_ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_TR_MAT1MAT2Difference__c</fullName>
        <formula>EUR_TR_MAT1__c - EUR_TR_MAT2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EUR TR MAT1 MAT2 Difference</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_MAT1__c</fullName>
        <label>EUR_TR_MAT1</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_MAT2__c</fullName>
        <label>EUR_TR_MAT2</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_MAT3__c</fullName>
        <label>EUR_TR_MAT3</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_MATActual__c</fullName>
        <label>EUR_TR_MATActual</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_RelatedAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>EUR_TR_RelatedAccount</label>
        <referenceTo>EUR_TR_Account__c</referenceTo>
        <relationshipName>EUR_TR_AccountSalesMAT</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>EUR TR Account Sales MAT</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EUR_TR_RelatedAccount__c</columns>
        <columns>EUR_TR_Brand__c</columns>
        <columns>EUR_TR_BrandQuality__c</columns>
        <columns>EUR_TR_BrandQualitySize__c</columns>
        <columns>EUR_TR_MAT1__c</columns>
        <columns>EUR_TR_MAT2__c</columns>
        <columns>EUR_TR_MAT3__c</columns>
        <columns>EUR_TR_MAT4__c</columns>
        <columns>EUR_TR_MAT5__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AS-{00000000}</displayFormat>
        <label>EUR_TR_AccountSalesMAT No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EUR TR Account Sales MAT</pluralLabel>
    <recordTypes>
        <fullName>EUR_TR_AccountSalesMAT</fullName>
        <active>true</active>
        <label>EUR_TR_AccountSalesMAT</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>